--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,91 @@
 body {
-    background: url("../images/backgroundTrack.png") no-repeat center center;
+    background: url("../images/backgroundTrack2.png") no-repeat center center;
+    background-size: cover;
 }
+
+html{
+    height: 100%;
+    width: 100%
+}
+
+body{
+
+max-width:100%;
+max-height: 100%;
+
+}
+
+#infoBar{
+    position:relative;
+   
+    width:100%;
+    height:100px
+
+}
+
+#plyDiv{
+    position:absolute;
+    top:0px;
+    left:0px;
+    height:100px;
+    text-align: left;
+    width:200px;
+    
+}
+
+#trafficLight{
+    height:100px;
+    width:100px;
+    margin:0px auto;
+}
+
+#oppDiv{
+    position:absolute;
+    top:0px;
+    right:0px;
+    height:100px;
+    width:200px;
+    
+}
+
+    /* The Modal (background) */
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+
+    /* The Close Button */
+    .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
 .loader {
     border: 16px solid #f3f3f3;
@@ -35,10 +120,3 @@ body {
     text-align: center;
     padding-top: 50px;
 }
-#car {
-    background-color: blue;
-    border-radius: 40px;
-    height:40px;
-    width: 60px;
-    position: absolute;
-    padding-top: 10px;
