--- a/css/instructions.css
+++ b/css/instructions.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/backgroundTrack2.png");
+    background-image: url("../images/backgroundTrack.png");
     background-size: cover;
 }
 
