--- a/css/game.css
+++ b/css/game.css
@@ -1,26 +1,29 @@
-body {
-    background: url("../images/backgroundTrack2.png") no-repeat center center;
-    background-size: cover;
+@font-face{
+    font-family:"arcade";
+    src:url("../fonts/arcade.ttf");
+}
+
+@font-face{
+    font-family:"arcade";
+    src:url("../fonts/kirbyss.ttf");
 }
 
 html{
     height: 100%;
-    width: 100%
+    width: 100%;
 }
 
 body{
-
-max-width:100%;
-max-height: 100%;
-
+    max-width:100%;
+    max-height: 100%;
+    background: url("../images/backgroundTrack.png") no-repeat center center;
+    background-size: cover;
 }
 
 #infoBar{
     position:relative;
-   
     width:100%;
     height:100px
-
 }
 
 #plyDiv{
@@ -30,7 +33,6 @@ max-height: 100%;
     height:100px;
     text-align: left;
     width:200px;
-    
 }
 
 #trafficLight{
@@ -45,47 +47,46 @@ max-height: 100%;
     right:0px;
     height:100px;
     width:200px;
-    
 }
 
-    /* The Modal (background) */
-    .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        padding-top: 100px; /* Location of the box */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    }
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
-    /* Modal Content */
-    .modal-content {
-        background-color: #fefefe;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-    }
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
 
-    /* The Close Button */
-    .close {
-        color: #aaaaaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
 
-    .close:hover,
-    .close:focus {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
-    }
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 .loader {
     border: 16px solid #f3f3f3;
@@ -95,6 +96,11 @@ max-height: 100%;
     height: 120px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
+}
+
+#loader{
+    padding: 50px;
+    margin: 60px;
 }
 
 @-webkit-keyframes spin {
@@ -120,3 +126,24 @@ max-height: 100%;
     text-align: center;
     padding-top: 50px;
 }
+
+#searching{
+    font-family: "arcade";
+    font-size: 50px;
+    padding: 20px;
+    padding-top: 40px;
+}
+
+
+#foundOpponent{
+    font-family: 'BioRhyme', serif;
+    font-size: 30px;
+    padding: 20px;
+}
+
+#countDown{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 60px;
+    padding: 20px;
+}
+
