--- a/css/game.css
+++ b/css/game.css
@@ -10,20 +10,26 @@
 
 html{
     height: 100%;
-    width: 100%;
+    width: 100%
 }
 
 body{
-    max-width:100%;
-    max-height: 100%;
-    background: url("../images/backgroundTrack.png") no-repeat center center;
-    background-size: cover;
+    width:100%;
+    height: 100%;
+    position: fixed;
+    background-color: LightSkyBlue;
+    margin:0px;
+    
 }
+
+
 
 #infoBar{
     position:relative;
+   
     width:100%;
     height:100px
+
 }
 
 #plyDiv{
@@ -33,6 +39,7 @@ body{
     height:100px;
     text-align: left;
     width:200px;
+    
 }
 
 #trafficLight{
@@ -46,46 +53,130 @@ body{
     top:0px;
     right:0px;
     height:100px;
-    width:200px;
+    width:200px;    
 }
 
-/* The Modal (background) */
+#PlyInfo{
+    display: inline-block;
+    list-style-type: none;
+}
+
+#OppInfo{
+    display: inline-block;
+    list-style-type: none;
+}
+
+#game{
+    display: none;
+}
+
+#gameBody{
+    top: 0px;
+    width: 100%;
+    overflow: auto;
+    background: url("../images/backgroundTrack.png") no-repeat center center;
+    background-size: 100% 100%;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+#myCanvas{
+    border: 3px solid #808080;
+}
+
+    /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1;
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
 
-/* Modal Content */
+    /* Modal Content */
 .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border-radius: 6px;
+        border: solid red;
+        width: 50%;
+        height: 50%;
+        text-align: center;
+        font-family: "arcade";
+        border: 1px red;
+    }
+
+.modal-content span{
+    cursor: default;
 }
 
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+a.buttonLink{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    
 }
+
+
+#inputId{
+    text-align: center;
+
+}
+
+#instBtn{
+    margin-top: 30px;
+    vertical-align:middle;
+    height: 30px;
+    font-size: 15px;
+    font-family: "arcade";
+}
+    /* The Close Button */
+.close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
 
 .close:hover,
 .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+.buttonBackground{
+    position: relative;
+    height:70px;
+    width: 70px;
+    background-color: Gainsboro;
+    box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
+    border-radius: 6px;
+    vertical-align:middle;
+    display: inline-block;
+    cursor:pointer;
+    padding:2px 2px 2px 2px;
+    margin: 20px 20px 20px 20px;
+
+}
+
+.caption{
+    height: 70px;
+    width: 76px;
+    margin-top: 10px;
+
+}
+
+#inst{
+    z-index:100000;
 }
 
 .loader {
@@ -113,32 +204,64 @@ body{
     100% { transform: rotate(360deg); }
 }
 
-#stoplight {
-    background-color: red;
-    border-radius: 200px;
-    height: 100px;
-    width: 100px;
-    margin: auto;
-}
-#spacebar {
+
+#spaceBarDiv {
     font-weight: bold;
     font-size: 30px;
     text-align: center;
     padding-top: 50px;
+    position: relative;
+    height: 50px;
+    width: 100%;
+
 }
+
+
+
+#messagesList{
+    list-style: none;
+}
+
+
+#messages{
+    width: 100%;
+    height: 130px;
+    position: fixed;
+    bottom: 0;
+    background-color: GhostWhite;
+    overflow: scroll;
+    font-family: Impact,Haettenschweiler,"Franklin Gothic Bold",Charcoal,"Helvetica Inserat","Bitstream Vera Sans Bold","Arial Black","sans serif"
+
+}
+
+#messages h2 {
+    margin:0px auto;
+    height: 30px;
+    text-align: center;
+    color: GhostWhite;
+    background-color: #626262;
+}
+
+
 
 #searching{
     font-family: "arcade";
+
     font-size: 50px;
     padding: 20px;
     padding-top: 40px;
+   
+    
 }
 
-
 #foundOpponent{
-    font-family: 'BioRhyme', serif;
+    
+    font-family: "arcade";
     font-size: 30px;
     padding: 20px;
+    display: none;
+   
+    
 }
 
 #countDown{
@@ -146,6 +269,7 @@ body{
     font-size: 60px;
     padding: 20px;
 }
+
 
 #img1{
 /*    -webkit-animation-name: example; 
@@ -155,8 +279,12 @@ body{
     animation-name: example3;
     animation-duration: 0s;
     position: relative;
-    top:380px;
+    top:65px;
+    padding:0;
+    margin: 0px;
     left: 20%;
+    height: 100px;
+    width: 200px
 
 }
 #img2{
@@ -166,8 +294,12 @@ body{
     animation-duration: 4s;*/
     animation-name: example3;
     animation-duration: 0s;
+    padding: 0;
+    margin: 0px;
+    bottom: 30px;
     position: relative;
-    top:280px;
+    height: 100px;
+    width: 200px;
     left: 10%;
 
 }
@@ -211,4 +343,6 @@ body{
 
     /*position: ;*/
 }
+
+
 
