--- a/css/game.css
+++ b/css/game.css
@@ -19,14 +19,14 @@ body{
     position: fixed;
     background-color: LightSkyBlue;
     margin:0px;
-    
+
 }
 
 
 
 #infoBar{
     position:relative;
-   
+
     width:100%;
     height:100px
 
@@ -39,13 +39,13 @@ body{
     height:100px;
     text-align: left;
     width:200px;
-    
+
 }
 
 #trafficLight{
     height:100px;
     width:100px;
-    margin:0px auto;
+    margin: auto; /* was 0px auto; */
 }
 
 #oppDiv{
@@ -53,21 +53,8 @@ body{
     top:0px;
     right:0px;
     height:100px;
-    width:200px;    
-}
+    width:200px;
 
-#PlyInfo{
-    display: inline-block;
-    list-style-type: none;
-}
-
-#OppInfo{
-    display: inline-block;
-    list-style-type: none;
-}
-
-#game{
-    display: none;
 }
 
 #gameBody{
@@ -77,10 +64,6 @@ body{
     background: url("../images/backgroundTrack.png") no-repeat center center;
     background-size: 100% 100%;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-#myCanvas{
-    border: 3px solid #808080;
 }
 
     /* The Modal (background) */
@@ -119,10 +102,9 @@ body{
 a.buttonLink{
     position: relative;
     display: inline-block;
-    cursor: pointer;
     height: 100%;
     width: 100%;
-    
+
 }
 
 
@@ -133,6 +115,14 @@ a.buttonLink{
 
 #instBtn{
     margin-top: 30px;
+    vertical-align:middle;
+    height: 30px;
+    font-size: 15px;
+    font-family: "arcade";
+}
+
+#nextBtn{
+    /*margin-top: 80px;*/
     vertical-align:middle;
     height: 30px;
     font-size: 15px;
@@ -191,7 +181,8 @@ a.buttonLink{
 
 #loader{
     padding: 50px;
-    margin: 60px;
+    margin: auto; /*was 60px*/
+
 }
 
 @-webkit-keyframes spin {
@@ -246,34 +237,35 @@ a.buttonLink{
 
 #searching{
     font-family: "arcade";
-
+    text-align: center;
     font-size: 50px;
     padding: 20px;
     padding-top: 40px;
-   
-    
+
+
 }
 
 #foundOpponent{
-    
+
     font-family: "arcade";
     font-size: 30px;
     padding: 20px;
-    display: none;
-   
-    
+    text-align: center;
+
+
 }
 
 #countDown{
     font-family: 'Press Start 2P', cursive;
     font-size: 60px;
     padding: 20px;
+    text-align: center;
 }
 
 
 #img1{
-/*    -webkit-animation-name: example; 
-    -webkit-animation-duration: 4s; 
+/*    -webkit-animation-name: example;
+    -webkit-animation-duration: 4s;
     animation-name: example;
     animation-duration: 4s;*/
     animation-name: example3;
@@ -283,13 +275,11 @@ a.buttonLink{
     padding:0;
     margin: 0px;
     left: 20%;
-    height: 100px;
-    width: 200px
 
 }
 #img2{
-/*    -webkit-animation-name: example2; 
-    -webkit-animation-duration: 4s; 
+/*    -webkit-animation-name: example2;
+    -webkit-animation-duration: 4s;
     animation-name: example2;
     animation-duration: 4s;*/
     animation-name: example3;
@@ -299,7 +289,6 @@ a.buttonLink{
     bottom: 30px;
     position: relative;
     height: 100px;
-    width: 200px;
     left: 10%;
 
 }
