--- a/css/instructions.css
+++ b/css/instructions.css
@@ -22,7 +22,7 @@ body {
 #instructions {
     margin: auto;
     border-radius: 10px;
-    padding-bottom: : 40px;
+    padding-bottom: 40px;
     height: 550px;
     width: 700px;
     background-color: white;
